[package]
name = "minx"
version = "2020.11.16"
authors = ["fawdlstty <f@fawdlstty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
async-std = { version = "1.7", features = ["attributes"] }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
