[package]
name = "minx"
version = "2020.11.16"
authors = ["fawdlstty <f@fawdlstty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11.0"
tonic-web = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
